# vio

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-05-07-vio-cinematic-sci-fi-ui.md
docs/superpowers/specs/: 2026-05-06-vio-cinematic-sci-fi-ui-design.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: fs.rs  layout.rs  log.rs  mod.rs  monitor.rs  network.rs  opencli.rs  platform.rs  shell.rs  system.rs  tray.rs
src/api/: monitor.ts  opencli.ts  platform.ts  tauri.ts
src/components/effects/: CornerDecor.tsx  NoiseOverlay.tsx  ParticleBackground.tsx  ScanlineOverlay.tsx  StartupScreen.tsx
src/components/layout/: AppGrid.tsx  ContextMenu.tsx  Desktop.tsx  Launcher.tsx  LayoutManager.tsx  MonitorIndicator.tsx  NotificationPanel.tsx  TaskBar.tsx  WorkspaceIndicator.tsx
src/components/shared/: ErrorBoundary.tsx
src/components/window/: WindowContent.tsx  WindowFrame.tsx
src/core/: constants.ts  types.ts
src/core/bus/: eventBus.ts  events.ts
src/core/persistence/: layoutPersistence.ts
src/core/platform/: platformStore.ts  shortcuts.ts
src/core/plugin-system/: index.ts  pluginStore.ts  types.ts
src/core/stores/: settingsStore.ts  uiStore.ts  (+1 more)
src/hooks/: useDragState.ts  useKeyboard.ts  useThumbnail.ts  useWindowData.ts
src/lib/: animations.ts  easings.ts  framer.ts  geometry.ts  index.ts
src/types/: index.ts
(+21 files in other folders)
